fix: apply individual CRD files instead of directory with kustomization.yaml
The workflow was failing because kubectl apply -f on a directory containing
kustomization.yaml tries to apply it as a regular Kubernetes resource.

Error:
  no matches for kind "Kustomization" in version "kustomize.config.k8s.io/v1beta1"

Fix:
- Apply each CRD file explicitly
- Skip kustomization.yaml (it's for kustomize, not kubectl apply -f)

This matches the approach used in e2e tests.

--- a/.github/workflows/test-local-dev.yml
+++ b/.github/workflows/test-local-dev.yml
@@ -61,7 +61,8 @@ jobs:
         kubectl label namespace ambient-code ambient-code.io/managed=true
         
         echo "Installing CRDs..."
-        kubectl apply -f components/manifests/base/crds/
+        kubectl apply -f components/manifests/base/crds/agenticsessions-crd.yaml
+        kubectl apply -f components/manifests/base/crds/projectsettings-crd.yaml
         
         echo "Setting up RBAC..."
         kubectl apply -f components/manifests/minikube/local-dev-rbac.yaml
