--- a/components/manifests/minikube/local-dev-rbac.yaml
+++ b/components/manifests/minikube/local-dev-rbac.yaml
@@ -82,30 +82,9 @@ subjects:
   name: local-dev-user
   namespace: ambient-code
 ---
-# ClusterRole for cross-namespace operations (minimal)
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: local-dev-namespace-viewer
-rules:
-# Only allow viewing namespaces (for project list)
-- apiGroups: [""]
-  resources: ["namespaces"]
-  verbs: ["get", "list", "watch"]
----
-# ClusterRoleBinding for namespace viewing
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: local-dev-namespace-viewer
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: local-dev-namespace-viewer
-subjects:
-- kind: ServiceAccount
-  name: local-dev-user
-  namespace: ambient-code
+# Note: local-dev-user intentionally has NO ClusterRole bindings
+# For local dev, we only need namespace-scoped permissions
+# Cross-namespace viewing should be done via backend SA, not local-dev-user
 ---
 # ClusterRole for backend-api (needs broad permissions for local dev)
 apiVersion: rbac.authorization.k8s.io/v1
