feat: prevent duplicate job monitoring in session handling
- Introduced a mutex and a map to track currently monitored jobs, ensuring that duplicate goroutines are not spawned for the same job.
- Updated the job monitoring logic to check if a job is already being monitored before starting a new monitoring goroutine, enhancing resource management and preventing unnecessary overhead.
- Improved logging to provide feedback when a job is already under monitoring, aiding in debugging and operational clarity.

These changes enhance the efficiency and reliability of session management by preventing redundant monitoring processes.

fix: improve handling of 'Creating' phase for sessions

- Enhanced error handling when checking for existing jobs during the 'Creating' phase, addressing potential inconsistencies if a job is missing.
- Updated logging to provide clearer feedback on session state transitions, including resetting to 'Pending' and job recreation logic.
- Ensured that error scenarios are logged and handled gracefully, improving robustness in session management.

These changes enhance the reliability of session handling by ensuring proper recovery from job-related issues during the creation process.

feat: improve error handling for ambient vertex secret checks

- Added detailed error messages and status updates for scenarios where the ambient vertex secret is missing or cannot be checked.
- Enhanced session status mutation to reflect the failure reasons, improving visibility into session state issues related to vertex secret management.

These changes enhance the robustness of session handling by providing clearer feedback on secret-related errors during session events.

feat: extend session handling to support 'Creating' phase

- Updated session event processing to include the 'Creating' phase, allowing for better management of operator restarts.
- Implemented logic to check for existing jobs during the 'Creating' phase, resuming monitoring if found or resetting th

--- a/components/manifests/base/crds/agenticsessions-crd.yaml
+++ b/components/manifests/base/crds/agenticsessions-crd.yaml
@@ -17,58 +17,39 @@ spec:
           spec:
             type: object
             properties:
-              # Multiple-repo configuration (new unified mapping)
+              # Repository configuration
               repos:
                 type: array
-                description: "List of repositories. Each has an input (required) and an optional output mapping."
+                description: "List of Git repositories to clone and work with"
                 items:
                   type: object
                   required:
-                  - input
+                  - url
                   properties:
-                    input:
-                      type: object
-                      required:
-                      - url
-                      properties:
-                        url:
-                          type: string
-                          description: "Input (upstream) Git repository URL"
-                        branch:
-                          type: string
-                          description: "Input branch to checkout"
-                          default: "main"
-                    output:
-                      type: object
-                      description: "Optional output (fork/target) repository"
-                      properties:
-                        url:
-                          type: string
-                          description: "Output Git repository URL (fork or same as input)"
-                        branch:
-                          type: string
-                          description: "Output branch to push to"
-                          default: "main"
-              mainRepoIndex:
-                type: integer
-                description: "Index of the repo in repos array treated as the main repo (Claude working dir). Defaults to 0 (first repo)."
-                default: 0
+                    url:
+                      type: string
+                      description: "Git repository URL"
+                    branch:
+                      type: string
+                      description: "Branch to checkout"
+                      default: "main"
               interactive:
                 type: boolean
                 description: "When true, run session in interactive chat mode using inbox/outbox files"
-              prompt:
+                default: true
+              initialPrompt:
                 type: string
-                description: "Optional initial prompt for the agentic session. If using a workflow with startupPrompt in ambient.json, this can be omitted."
+                description: "Initial prompt used only on first SDK invocation for brand new sessions (ignored on continuations or workflow restarts)."
               displayName:
                 type: string
                 description: "A descriptive display name for the agentic session generated from prompt and website"
               userContext:
                 type: object
-                description: "Authenticated caller identity captured at creation time"
+                description: "Authenticated caller identity captured at creation time (used for authorization and audit)"
                 properties:
                   userId:
                     type: string
-                    description: "Stable user identifier (from SSO)"
+                    description: "Stable user identifier (from SSO, always overwritten from auth token)"
                   displayName:
                     type: string
                     description: "Human-readable display name"
@@ -115,93 +96,103 @@ spec:
           status:
             type: object
             properties:
+              observedGeneration:
+                type: integer
+                format: int64
+                description: "Spec generation that the operator has fully reconciled."
               phase:
                 type: string
                 enum:
                 - "Pending"
                 - "Creating"
                 - "Running"
+                - "Stopping"
+                - "Stopped"
                 - "Completed"
                 - "Failed"
-                - "Stopped"
-                - "Error"
                 default: "Pending"
-              message:
-                type: string
-                description: "Status message or error details"
               startTime:
                 type: string
                 format: date-time
+                description: "Timestamp when the session runner started executing."
               completionTime:
                 type: string
                 format: date-time
-              jobName:
-                type: string
-                description: "Name of the Kubernetes job created for this session"
-              stateDir:
-                type: string
-                description: "Directory path where session state files are stored"
-              # Result summary fields from the runner's ResultMessage
-              subtype:
-                type: string
-                description: "Result subtype (e.g., success, error, interrupted)"
-              is_error:
-                type: boolean
-                description: "Whether the run ended with an error"
-              num_turns:
-                type: integer
-                description: "Number of conversation turns in the run"
-              session_id:
-                type: string
-                description: "Runner session identifier"
-              total_cost_usd:
-                type: number
-                description: "Total cost of the run in USD as reported by the runner"
-              usage:
-                type: object
-                description: "Token and request usage breakdown"
-                x-kubernetes-preserve-unknown-fields: true
-              result:
-                type: string
-                description: "Final result text as reported by the runner"
-              has_workspace_changes:
-                type: boolean
-                description: "Whether workspace has uncommitted changes (for cleanup decisions)"
-              repos:
+                description: "Timestamp when the session reached a terminal phase."
+              reconciledRepos:
                 type: array
-                description: "Per-repo status tracking"
+                description: "Current reconciliation state for each repository."
                 items:
                   type: object
                   properties:
+                    url:
+                      type: string
+                    branch:
+                      type: string
                     name:
                       type: string
-                      description: "Repository name (derived from URL or spec.repos[].name)"
                     status:
                       type: string
-                      description: "Repository state"
                       enum:
-                      - "pushed"
-                      - "abandoned"
-                      - "diff"
-                      - "nodiff"
-                    last_updated:
+                      - "Cloning"
+                      - "Ready"
+                      - "Failed"
+                    clonedAt:
                       type: string
                       format: date-time
-                      description: "Last time this repo status was updated"
-                    total_added:
+              reconciledWorkflow:
+                type: object
+                description: "Current reconciliation state for the active workflow."
+                properties:
+                  gitUrl:
+                    type: string
+                  branch:
+                    type: string
+                  path:
+                    type: string
+                    description: "Optional path within the workflow repository"
+                  status:
+                    type: string
+                    enum:
+                    - "Cloning"
+                    - "Active"
+                    - "Failed"
+                  appliedAt:
+                    type: string
+                    format: date-time
+              sdkSessionId:
+                type: string
+                description: "SDK session identifier captured for resume support."
+              sdkRestartCount:
+                type: integer
+                description: "Number of times the SDK has been restarted during this session."
+              conditions:
+                type: array
+                description: "Detailed condition set describing reconciliation progress."
+                items:
+                  type: object
+                  required:
+                  - type
+                  - status
+                  properties:
+                    type:
+                      type: string
+                    status:
+                      type: string
+                      enum:
+                      - "True"
+                      - "False"
+                      - "Unknown"
+                    reason:
+                      type: string
+                    message:
+                      type: string
+                    lastTransitionTime:
+                      type: string
+                      format: date-time
+                    observedGeneration:
                       type: integer
-                      description: "Total lines added (from git diff)"
-                    total_removed:
-                      type: integer
-                      description: "Total lines removed (from git diff)"
-    additionalPrinterColumns:
-    - name: Phase
-      type: string
-      description: Current phase of the agentic session
-      jsonPath: .status.phase
-    - name: Age
-      type: date
-      jsonPath: .metadata.creationTimestamp
+                      format: int64
   scope: Namespaced
   names:
     plural: agenticsessions
