--- a/components/manifests/base/rbac/operator-clusterrole.yaml
+++ b/components/manifests/base/rbac/operator-clusterrole.yaml
@@ -3,10 +3,10 @@ kind: ClusterRole
 metadata:
   name: agentic-operator
 rules:
-# AgenticSession custom resources (read-only + status updates)
+# AgenticSession custom resources (read + update for annotations/spec + status updates)
 - apiGroups: ["vteam.ambient-code"]
   resources: ["agenticsessions"]
-  verbs: ["get", "list", "watch"]
+  verbs: ["get", "list", "watch", "update", "patch"]
 - apiGroups: ["vteam.ambient-code"]
   resources: ["agenticsessions/status"]
   verbs: ["update"]
@@ -25,10 +25,10 @@ rules:
 - apiGroups: ["batch"]
   resources: ["jobs"]
   verbs: ["get", "list", "watch", "create", "delete"]
-# Pods (for getting logs from failed jobs)
+# Pods (for getting logs from failed jobs and cleanup on stop)
 - apiGroups: [""]
   resources: ["pods"]
-  verbs: ["get", "list", "watch", "delete"]
+  verbs: ["get", "list", "watch", "delete", "deletecollection"]
 - apiGroups: [""]
   resources: ["pods/log"]
   verbs: ["get"]
@@ -44,11 +44,22 @@ rules:
 - apiGroups: ["apps"]
   resources: ["deployments"]
   verbs: ["get", "list", "watch", "create"]
-# RoleBindings (create group access bindings)
+# ServiceAccounts (create runner SAs for session isolation)
+- apiGroups: [""]
+  resources: ["serviceaccounts"]
+  verbs: ["get", "create", "delete"]
+- apiGroups: [""]
+  resources: ["serviceaccounts/token"]
+  verbs: ["create"]
+# Roles (create runner roles with least-privilege)
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources: ["roles"]
+  verbs: ["get", "create", "update", "delete"]
+# RoleBindings (bind runner SAs to roles)
 - apiGroups: ["rbac.authorization.k8s.io"]
   resources: ["rolebindings"]
-  verbs: ["get", "create"]
-# Secrets (for copying ambient-vertex to job namespaces) Without this we cannot copy secrets to the session namespaces
+  verbs: ["get", "create", "delete"]
+# Secrets (runner tokens, ambient-vertex, integration secrets)
 - apiGroups: [""]
   resources: ["secrets"]
   verbs: ["get", "create", "delete", "update"]
