ading path to git triggers so that we don;t run workflows unnecessarily
Signed-off-by: Nelesh Singla <117123879+nsingla@users.noreply.github.com>

--- a/.github/workflows/go-lint.yml
+++ b/.github/workflows/go-lint.yml
@@ -3,8 +3,22 @@ name: Go Lint and Format
 on:
   push:
     branches: [main]
+    paths:
+      - 'components/backend/**/*.go'
+      - 'components/backend/go.mod'
+      - 'components/backend/go.sum'
+      - 'components/operator/**/*.go'
+      - 'components/operator/go.mod'
+      - 'components/operator/go.sum'
   pull_request:
     branches: [main]
+    paths:
+      - 'components/backend/**/*.go'
+      - 'components/backend/go.mod'
+      - 'components/backend/go.sum'
+      - 'components/operator/**/*.go'
+      - 'components/operator/go.mod'
+      - 'components/operator/go.sum'
   workflow_dispatch:
 
 jobs:
