--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -3,8 +3,23 @@ name: E2E Tests
 on:
   pull_request:
     branches: [ main, master ]
+    paths:
+      - 'components/**'
+      - '.github/workflows/e2e.yml'
+      - 'e2e/**'
+      - 'scripts/**'
+      - '.specify/**'
+      - 'agents/**'
+
   push:
     branches: [ main, master ]
+    paths:
+      - 'components/**'
+      - '.github/workflows/e2e.yml'
+      - 'e2e/**'
+      - 'scripts/**'
+      - '.specify/**'
+      - 'agents/**'
   workflow_dispatch:  # Allow manual trigger
 
 jobs:
