--- a/.github/workflows/frontend-lint.yml
+++ b/.github/workflows/frontend-lint.yml
@@ -3,38 +3,32 @@ name: Frontend Lint and Type Check
 on:
   push:
     branches: [main]
+    paths:
+      - 'components/frontend/**/*.ts'
+      - 'components/frontend/**/*.tsx'
+      - 'components/frontend/**/*.js'
+      - 'components/frontend/**/*.jsx'
+      - 'components/frontend/package.json'
+      - 'components/frontend/package-lock.json'
+      - 'components/frontend/tsconfig.json'
+      - 'components/frontend/eslint.config.mjs'
+      
   pull_request:
     branches: [main]
+    paths:
+      - 'components/frontend/**/*.ts'
+      - 'components/frontend/**/*.tsx'
+      - 'components/frontend/**/*.js'
+      - 'components/frontend/**/*.jsx'
+      - 'components/frontend/package.json'
+      - 'components/frontend/package-lock.json'
+      - 'components/frontend/tsconfig.json'
+      - 'components/frontend/eslint.config.mjs'
   workflow_dispatch:
 
 jobs:
-  detect-frontend-changes:
-    runs-on: ubuntu-latest
-    outputs:
-      frontend: ${{ steps.filter.outputs.frontend }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-
-      - name: Check for Frontend changes
-        uses: dorny/paths-filter@v3
-        id: filter
-        with:
-          filters: |
-            frontend:
-              - 'components/frontend/**/*.ts'
-              - 'components/frontend/**/*.tsx'
-              - 'components/frontend/**/*.js'
-              - 'components/frontend/**/*.jsx'
-              - 'components/frontend/package.json'
-              - 'components/frontend/package-lock.json'
-              - 'components/frontend/tsconfig.json'
-              - 'components/frontend/eslint.config.mjs'
-
   lint-frontend:
     runs-on: ubuntu-latest
-    needs: detect-frontend-changes
-    if: needs.detect-frontend-changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
@@ -68,7 +62,7 @@ jobs:
 
   lint-summary:
     runs-on: ubuntu-latest
-    needs: [detect-frontend-changes, lint-frontend]
+    needs: lint-frontend
     if: always()
     steps:
       - name: Check overall status
